--- a/src/component/Style/Style.css
+++ b/src/component/Style/Style.css
@@ -1,4 +1,4 @@
-.nav {
-    background-color: rgba(69, 69, 218, 0.553);
-    
+.Navbar {
+    background-color: rgba(216, 196, 19, 0.553);
+    margin-top:20px ;
 }
